Add Netty dependency

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>classgraph</artifactId>
             <version>4.8.71</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.49.Final</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
