--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>one.yezii</groupId>
-    <artifactId>peanut</artifactId>
-    <version>0.0.1</version>
+    <groupId>one.yezii.peanut</groupId>
+    <artifactId>peanut-core</artifactId>
+    <version>0.0.1-alpha</version>
     <packaging>jar</packaging>
     <name>Peanut</name>
     <description>A nano java web framework</description>
