--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,9 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
                 <version>3.8.1</version>
             </plugin>
